1. Метод .of [#357647]