@@ -15,9 +15,8 @@ public class ConvertMatrix2ListTest {
                 {1, 2},
                 {3, 4}
         };
-        List<Integer> expect = Arrays.asList(
-                1, 2, 3, 4
-        );
+        //List<Integer> expect = Arrays.asList(1, 2, 3, 4);
+        List<Integer> expect = List.of(1, 2, 3, 4);
         List<Integer> result = list.toList(input);
         assertThat(result, is(expect));
     }
@@ -30,9 +29,8 @@ public class ConvertMatrix2ListTest {
                 {4, 5, 6},
                 {7, 0, 0}
         };
-        List<Integer> expect = Arrays.asList(
-                1, 2, 3, 4, 5, 6, 7
-        );
+        //List<Integer> expect = Arrays.asList(1, 2, 3, 4, 5, 6, 7);
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6, 7);
         List<Integer> result = list.toList(input);
         assertThat(result, is(expect));
     }
